文章页点击切换显示目录按钮时，个人觉得最好快速完成切换过程，500毫秒内完成会在左侧显示出目录的效果，页面有点混乱

--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -170,10 +170,10 @@
         let $mainContent = $('#main-content');
         $('#floating-toc-btn .btn-floating').click(function () {
             if ($tocAside.hasClass(expandedClass)) {
-                $tocAside.removeClass(expandedClass).slideUp(500);
+                $tocAside.removeClass(expandedClass).hide();
                 $mainContent.removeClass('l9');
             } else {
-                $tocAside.addClass(expandedClass).slideDown(500);
+                $tocAside.addClass(expandedClass).show();
                 $mainContent.addClass('l9');
             }
             fixPostCardWidth('artDetail', 'prenext-posts');
