--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1202,6 +1202,7 @@ table tr:nth-child(2n), thead {
 
 .chip-default .tag-length {
     color: #e91e63;
+    margin-top: 1px;
 }
 
 .chip-active .tag-length {
