--- a/layout/_partial/valine.ejs
+++ b/layout/_partial/valine.ejs
@@ -24,7 +24,7 @@
 
     #vcomments a {
         padding: 0 2px;
-        color: #42b983;
+        color: #4cbf30;
         font-weight: 500;
         text-decoration: none;
     }
@@ -235,7 +235,12 @@
 </style>
 
 <div class="card valine-card" data-aos="fade-up">
-    <div id="vcomments" class="card-content" style="display: grid"></div>
+    <div class="comment_headling" style="font-size: 20px; font-weight: 700; position: relative; left: 20px; top: 15px; padding-bottom: 5px;">
+        <i class="fas fa-comments fa-fw" aria-hidden="true"></i>
+        <span>评论</span>
+    </div>
+    <div id="vcomments" class="card-content" style="display: grid">
+    </div>
 </div>
 
 <script src="/libs/valine/av-min.js"></script>
