--- a/layout/_partial/post-detail.ejs
+++ b/layout/_partial/post-detail.ejs
@@ -33,41 +33,42 @@
             </div>
 
             <div class="post-info">
+                <% if (theme.postInfo.date) { %>
                 <div class="post-date info-break-policy">
                     <i class="far fa-calendar-minus fa-fw"></i><%- __('publishDate') %>:&nbsp;&nbsp;
                     <%- date(page.date, 'YYYY-MM-DD') %>
                 </div>
-                
-                <% if (date(page.updated, 'YYYY-MM-DD') != date(page.date, 'YYYY-MM-DD')) { %>
+                <% } %>
+
+                <% if (theme.postInfo.update) { %>
                 <div class="post-date info-break-policy">
                     <i class="far fa-calendar-check fa-fw"></i><%- __('updateDate') %>:&nbsp;&nbsp;
                     <%- date(page.updated, 'YYYY-MM-DD') %>
                 </div>
                 <% } %>
 
-                <% if (theme.wordCount.enable) { %>
-                    <% if (theme.wordCount.postWordCount) { %>
-                    <div class="info-break-policy">
-                        <i class="far fa-file-word fa-fw"></i><%- __('wordCount') %>:&nbsp;&nbsp;
-                        <%= wordcount(page.content) %>
-                    </div>
-                    <% } %>
+                <% if (theme.postInfo.wordCount) { %>
+                <div class="info-break-policy">
+                    <i class="far fa-file-word fa-fw"></i><%- __('wordCount') %>:&nbsp;&nbsp;
+                    <%= wordcount(page.content) %>
+                </div>
+                <% } %>
 
-                    <% if (theme.wordCount.min2read) { %>
-                    <div class="info-break-policy">
-                        <i class="far fa-clock fa-fw"></i><%- __('readTimes') %>:&nbsp;&nbsp;
-                        <%= min2read(page.content) %> <%= __('Minutes') %>
-                    </div>
-                    <% } %>
+                <% if (theme.postInfo.min2read) { %>
+                <div class="info-break-policy">
+                    <i class="far fa-clock fa-fw"></i><%- __('readTimes') %>:&nbsp;&nbsp;
+                    <%= min2read(page.content) %> <%= __('Minutes') %>
+                </div>
                 <% } %>
 				
-				<% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
+                <% if (theme.postInfo.readCount && theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
                     <div id="busuanzi_container_page_pv" class="info-break-policy">
                         <i class="far fa-eye fa-fw"></i><%- __('readCount') %>:&nbsp;&nbsp;
                         <span id="busuanzi_value_page_pv"></span>
                     </div>
 				<% } %>
             </div>
+            
         </div>
         <hr class="clearfix">
         <div class="card-content article-card-content">
