--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -92,7 +92,7 @@ hr {
 }
 
 blockquote {
-    border-left: 5px solid #42b983;
+    border-left: 5px solid #1f4d71;
     padding: 1rem 0.8rem 0.2rem 0.8rem;
     color: #666;
     background-color: rgba(66, 185, 131, .1);
@@ -179,8 +179,8 @@ code {
     top: 4px;
     right: 0px;
     filter: invert(50%);
-    padding: 7px 10px;
-    z-index: 999;
+    padding: 7px;
+    z-index: 999 !important;
     cursor: pointer;
     transition: all .3s;
     transform: rotate(0deg);
@@ -248,11 +248,11 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background-image: linear-gradient(to right, #1f4d71 0%, #71bbb6 100%);
 }
 
 .text-color {
-    color: #0f9d58 !important;
+    color: #1f4d71 !important;
 }
 
 .white-color {
@@ -264,7 +264,7 @@ mark {
     position: fixed;
     bottom: 0;
     z-index: 300;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background: linear-gradient(to right, #1f4d71 0%, #71bbb6 100%);
     opacity: 0.8;
 }
 
@@ -549,7 +549,7 @@ header .go-back i {
     height: 40vh !important;
 }
 
-.bg-cover:after {
+.bg-cover1:after {
     -webkit-animation: rainbow 60s infinite;
     animation: rainbow 60s infinite;
 }
@@ -879,7 +879,7 @@ article a {
 
 article a:hover {
     font-weight: bold;
-    color: #42b983;
+    color: #1f4d71;
     text-decoration: underline;
 }
 
@@ -1062,7 +1062,7 @@ article .article-tags .chip {
     border-radius: 15px;
     margin-right: 5px;
     margin-bottom: 2px;
-    color: #42b983;
+    color: #71bbb6;
     background: #fff;
     border: 1px solid;
     transition: all 0.6s ease-in-out;
@@ -1070,17 +1070,17 @@ article .article-tags .chip {
 
 #artDetail .tag_share .article-tag .chip:hover {
     color: #fff;
-    background: #42b983;
+    background: #71bbb6;
 }
 
 #artDetail .post-cate {
     float: right;
-    color: #42b983;
+    color: #71bbb6;
 }
 
 #artDetail .post-cate a {
     padding-right: 5px;
-    color: #42b983;
+    color: #71bbb6;
     font-weight: 500;
 }
 
@@ -1099,7 +1099,7 @@ article .article-tags .chip {
 
 #artDetail .post-info .post-category:hover {
     font-weight: bold;
-    color: #42b983;
+    color: #1f4d71;
     text-decoration: underline;
 }
 
@@ -1159,7 +1159,7 @@ article .article-tags .chip {
 
 #artDetail .reprint a {
     font-size: 1.05rem;
-    color: #42b983;
+    color: #71bbb6;
     font-weight: 500;
 }
 
@@ -1175,7 +1175,7 @@ article .article-tags .chip {
 
 #articleContent a {
     padding: 0 2px;
-    color: #42b983;
+    color: #71bbb6;
     font-weight: 500;
     text-decoration: underline;
     word-wrap: break-word;
@@ -1303,7 +1303,7 @@ thead {
 
 .chip-container .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%) !important;
+    background: linear-gradient(to right, #1f4d71 0%, #71bbb6 100%) !important;
 }
 
 .chip .tag-length {
@@ -1379,7 +1379,7 @@ thead {
     left: 18px;
     height: 100%;
     width: 4px;
-    background: #0f9d58;
+    background: #1f4d71;
 }
 
 @media only screen and (min-width: 900px) {
@@ -1594,7 +1594,7 @@ thead {
 }
 
 .post-statis .statis .count a {
-    color: #42b983;
+    color: #71bbb6;
 }
 
 .post-statis .statis .name {
@@ -1615,8 +1615,9 @@ thead {
     margin: 0 0.5rem;
     padding: 0;
     color: #fff;
-    border: 1px solid #0f9d58;
-    background: radial-gradient(#4cbf30, #0f9d58);
+    border: 1px solid #1f4f71;
+    background: radial-gradient(#71bbb6, #1f4d71);
+    ;
     font-size: 0.9rem;
     border-radius: 50%;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .21), 0 2px 3px rgba(0, 0, 0, .1);
@@ -1792,8 +1793,9 @@ thead {
 
 .other-skills .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
-    border: 1px solid #4cbf30;
+    background: linear-gradient(to right, #1f4d71 0%, #71bbb6 100%);
+    ;
+    border: 1px solid #1f4d71;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25)
 }
 
@@ -1859,7 +1861,7 @@ footer .copy-right {
 
 .search-result-list .search-result-title {
     font-size: 1.4rem;
-    color: #42b983;
+    color: #1f4d71;
 }
 
 .search-result-list li {
@@ -1889,7 +1891,7 @@ footer .copy-right {
 }
 
 .top-scroll .btn-floating {
-    background: linear-gradient(to bottom right, #FF5E3A 0%, #FF2A68 100%);
+    background: linear-gradient(to bottom right, #1f4d71 0%, #71bbb6 100%);
     width: 48px;
     height: 48px;
 }
@@ -2008,9 +2010,7 @@ footer .copy-right {
 }
 
 /*二级菜单*/
-
-.nav-menu {
-}
+.nav-menu {}
 
 .nav-menu li .sub-nav {
     position: absolute;
@@ -2109,13 +2109,13 @@ footer .copy-right {
 }
 
 .m-nav-show,
-.m-nav-item > a:hover {
+.m-nav-item>a:hover {
     color: #FFF;
     background: rgba(255, 255, 255, .8);
 }
 
-.m-nav-show > a:before,
-.m-nav-item > a:hover:before {
+.m-nav-show>a:before,
+.m-nav-item>a:hover:before {
     opacity: 1;
 }
 
