--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -501,8 +501,8 @@ header .side-nav .social-link {
 }
 
 .cover-social-link {
-    bottom: 0;
-    width: 100%;
+    position: relative;
+    top: 18vh;
     text-align: center;
 }
 
