修复音乐的 JSON 配置中有单引号的情况页面不显示的音乐的问题

--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -30,7 +30,7 @@ $(function () {
         volume: Number('<%- theme.music.volume %>'),
         listFolded: '<%- theme.music.listFolded %>' === 'true',
         listMaxHeight: '<%- theme.music.listMaxHeight %>',
-        audio: JSON.parse('<%- audiosJson %>')
+        audio: eval(<%- audiosJson %>)
     });
 });
 </script>
