--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -389,9 +389,11 @@ header .side-nav .social-link {
 }
 
 .cover-btns a:hover {
-    border: transparent;
-    background-color: transparent;
-    box-shadow: transparent;
+    border: 1px solid #f44336;
+    background-color: #f44336;
+    box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42),
+            0 4px 23px 0 rgba(0, 0, 0, 0.12),
+            0 8px 10px -5px rgba(233, 30, 99, 0.2);
 }
 
 .cover-btns a i {
@@ -502,7 +504,8 @@ header .side-nav .social-link {
 }
 
 .cover-social-link {
-    bottom: 0;
+    position: relative;
+    top: 23vh;
     width: 100%;
     text-align: center;
 }
@@ -568,12 +571,9 @@ header .go-back i {
 }
 
 .bg-cover .container {
-    position: absolute;
-    top: 25%;
+    position: relative;
     color: #fff;
     z-index: 2;
-    left: 0;
-    right: 0;
 }
 
 .bg-cover .title {
@@ -684,10 +684,6 @@ header .go-back i {
         background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
         background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
     }
-}
-
-.carousel .indicators {
-    bottom: 40px;
 }
 
 .index-card {
