修复 wordCount 未安装的问题，修改了部分配置

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
             |&nbsp;Powered by&nbsp;<a href="https://hexo.io/" target="_blank">Hexo</a>
             |&nbsp;Theme&nbsp;<a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>
             <br>
-            <% if (theme.wordCount.totalCount) { %>
+            <% if (theme.postInfo.totalCount) { %>
             &nbsp;<i class="fas fa-chart-area"></i>&nbsp;站点总字数:&nbsp;<span
                 class="white-color"><%= totalcount(site) %></span>&nbsp;字
             <% } %>
