修复吸底模式的所占高度

--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -3,7 +3,7 @@ var audiosJson = JSON.stringify(site.data.musics);
 %>
 
 <link rel="stylesheet" href="<%- theme.libs.css.aplayer %>">
-<div class="music-player">
+<div class="<% if (theme.music.enable && !theme.music.fixed) { %>music-player<% } %>">
     <% if (theme.music.showTitle) { %>
     <div class="title center-align">
         <i class="fas fa-music"></i>&nbsp;&nbsp;<%- theme.music.title %>
