新增了 TOC 默认展开层级的配置，修复了 TOC 横向滚动条的问题

--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -23,6 +23,7 @@
     }
 
     .toc-widget {
+        width: 345px;
         padding-left: 20px;
     }
 
@@ -41,7 +42,7 @@
 
     #toc-content {
         height: calc(100vh - 250px);
-        overflow: scroll;
+        overflow: auto;
     }
 
     #toc-content ol {
@@ -118,7 +119,7 @@
             tocSelector: '#toc-content',
             contentSelector: '#articleContent',
             headingsOffset: -($(window).height() * 0.4 - 45),
-            // headingsOffset: -205,
+            collapseDepth: Number('<%- theme.toc.collapseDepth %>'),
             headingSelector: '<%- theme.toc.heading %>'
         });
 
