--- a/layout/_partial/paging.ejs
+++ b/layout/_partial/paging.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col s6 m4 l4">
             <% if (page.prev) { %>
-            <a href="<%- url_for(page.prev_link) %>"
+            <a href="/<%- url_for(page.prev_link) %>"
                class="left btn-floating btn-large waves-effect waves-light bg-color">
                 <i class="fas fa-angle-left"></i>
             </a>
@@ -17,7 +17,7 @@
         </div>
         <div class="col s6 m4 l4">
             <% if (page.next) { %>
-            <a href="<%- url_for(page.next_link) %>"
+            <a href="/<%- url_for(page.next_link) %>"
                class="right btn-floating btn-large waves-effect waves-light bg-color">
                 <i class="fas fa-angle-right"></i>
             </a>
