添加自定义文章keywords功能

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -29,8 +29,12 @@
 
     // keywords.
     var keyWords = config.keywords ? config.keywords : config.title;
-    keyWords = title ? title  + ', ' + keyWords : keyWords;
-
+    if (page.keywords){
+        keyWords = page.keywords;
+    }    
+    else {
+    	keyWords = title ? title  + ', ' + keyWords : keyWords;
+    }
     // description.
     var description = null;
     if (page.hasOwnProperty('__post') && page.__post) {
