--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -29,12 +29,12 @@
 
     // keywords.
     var keyWords = config.keywords ? config.keywords : config.title;
-    if (page.keywords){
+    if (page.keywords) {
         keyWords = page.keywords;
-    }    
-    else {
+    } else {
     	keyWords = title ? title  + ', ' + keyWords : keyWords;
     }
+
     // description.
     var description = null;
     if (page.hasOwnProperty('__post') && page.__post) {
